--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node --env-file=.env app",
     "eslint": "npx eslint .",
     "eslint:fix": "npx eslint . --fix",
-    "test": "NODE_ENV=test mocha test/**/*.test.js"
+    "test": "NODE_ENV=test mocha test/**/*.test.js",
+    "jsdoc": "npx jsdoc -c jsdoc.config.json"
   },
   "author": "",
   "license": "ISC",
@@ -21,8 +22,10 @@
   "devDependencies": {
     "chai": "^5.1.2",
     "eslint": "^9.19.0",
+    "jsdoc": "^4.0.4",
     "mocha": "^11.1.0",
     "nodemon": "^3.1.9",
+    "rimraf": "^6.0.1",
     "supertest": "^7.0.0"
   }
 }
